# datasette-pretty-traces

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_pretty_traces/: __init__.py
datasette_pretty_traces/static/: datasette-pretty-traces.js
datasette_pretty_traces/templates/: pretty_traces_demo.html
tests/: test_pretty_traces.py
